--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">Shopping Assistant</string>
-    <string name="title_activity_main">Shopping Assistant</string>
-    <string name="package_name">io.ionic.starter</string>
-    <string name="custom_url_scheme">io.ionic.starter</string>
+    <string name="app_name">Basket Bot</string>
+    <string name="title_activity_main">Basket Bot</string>
+    <string name="package_name">com.basketbot.app</string>
+    <string name="custom_url_scheme">com.basketbot.app</string>
 </resources>
